# trinetra

./: .dockerignore  .env.docker.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  app.py  config-docker.yaml  config.docker.yaml  config.yaml  config_dev.yaml  config_override.yaml  docker-compose.yml  install.sh  pyproject.toml  report.html  requirements.txt  ruff.toml  run.py  run.sh  update.sh
.cursor/rules/: trinetra-rule.mdc
.roo/rules/: common-rules.md
scripts/: debug_moonraker.py  docker-setup.sh  test_server.sh
static/css/: style.css
static/js/: config.js  folder_view.js  gcode_files.js  gcode_renderer.js  main.js  settings.js  shared_3d_renderer.js  stats.js
templates/: base.html  config.html  folder_view.html  gcode_files.html  index.html  settings.html  stats.html
tests/: conftest.py  test_app.py  test_bambu_cloud.py  test_config.py  test_folder_view_e2e.py  test_gcode_files_e2e.py  test_gcode_handler.py  test_history_stats.py  test_homepage_e2e.py  test_index_e2e.py  test_moonraker.py  test_moonraker_service.py  test_pagination.py  test_reload_index_e2e.py  test_search.py  test_search_api.py  test_sort_filter.py  test_stats_e2e.py  test_three_mf.py
tests/mock_responses/: history_list.json  printer_info.json  queue_job_error.json  queue_job_success.json  server_info.json
tests/test_data/: config.yaml  moonraker_api_response_mock.json
tests/test_data/gcodes/: F45 Long hook 2in_0.3mm_2x.gcode  F45 Long hook 3IN_2x_0.2mm.gcode  F45 Short Hook 1IN_0.3mm_100mms.gcode  F45 Short Hook 1IN_0.3mm_2x.gcode  file1_0.2mm.gcode  file1_0.3mm.gcode  (+6 more)
trinetra/: config.py  config_paths.py  database.py  gcode_handler.py  logger.py  models.py  moonraker.py  moonraker_service.py  search.py  three_mf.py
trinetra/integrations/: __init__.py  protocol.py  registry.py
(+26 files in other folders)
