[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trinetra"
version = "1.2.0"
description = "Local 3D printing files catalog for Klipper"
authors = [
    {name = "Nahush Kulkarni", email = "me@nahushrk.com"}
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10"
]
dependencies = [
    "Flask==3.0.3",
    "pyyaml==6.0.2",
    "gunicorn==23.0.0",
    "Flask-Compress==1.15",
    "requests==2.32.4",
    "thefuzz==0.20.0",
]

[project.optional-dependencies]
dev = [
    "ruff==0.6.9",
    "pytest==8.0.0",
]

[project.scripts]
trinetra = "app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["trinetra*"]

[tool.ruff]
target-version = "py310"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
] 